# RedirPlugin

./: .gitignore  CMakeLists.txt  ex  readme.md  test.c
src/: CMakeLists.txt  Makefile  RedirPlugin.cc  RedirPlugin.hh  XrdCmsRedirLocal.cc  XrdCmsRedirLocal.hh  cmake_install.cmake
